Bug 350135 - settings reset after reboot
Summary: settings reset after reboot
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_autostart (other bugs)
Version First Reported In: 5.3.2
Platform: Other Linux
: NOR critical
Target Milestone: ---
Assignee: Laurent Montel
URL:
Keywords:
: 346862 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-07-11 21:03 UTC by illumilore
Modified: 2015-08-20 15:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description illumilore 2015-07-11 21:03:26 UTC
After creating a script for startup and shutdown>autostart, it always loses all settings after a reboot and none of the scripts start.

Reproducible: Always
Comment 1 David Edmundson 2015-08-20 15:20:35 UTC
Git commit 2bbda1e23fd8cff7350260e9003e489f9b838f39 by David Edmundson.
Committed on 20/08/2015 at 15:20.
Pushed by davidedmundson into branch 'Plasma/5.4'.

Fix autostart scripts on startup
REVIEW: 124837

M  +69   -51   kcms/autostart/autostart.cpp
M  +1    -0    kcms/autostart/autostart.h

http://commits.kde.org/plasma-desktop/2bbda1e23fd8cff7350260e9003e489f9b838f39
Comment 2 David Edmundson 2015-08-20 15:23:11 UTC
*** Bug 346862 has been marked as a duplicate of this bug. ***