Fix autostart scripts on startup

BUG: 350135
REVIEW: 124837